--- a/src/SelectWidget/selectwidget.module.css
+++ b/src/SelectWidget/selectwidget.module.css
@@ -17,6 +17,9 @@
 
 .value {
   flex-grow: 1;
+  display: flex;
+  gap: 0.5em;
+  flex-wrap: wrap;
 }
 
 .clear-btn {
@@ -60,7 +63,7 @@
   left: 0;
   top: calc(100% + 0.25em);
   background-color: white;
-  z-index: 100%;
+  z-index: 100;
 }
 
 .options.show {
@@ -79,4 +82,32 @@
 .option.highlighted {
   background-color: hsl(200, 100%, 50%);
   color: white;
+}
+
+.option-badge {
+  display: flex;
+  align-items: center;
+  border: 0.05em solid #777;
+  border-radius: 0.25em;
+  padding: 0.15em 0.25em;
+  gap: 0.25em;
+  cursor: pointer;
+  background: none;
+  outline: none;
+}
+
+.option-badge:hover,
+.option-badge:focus {
+  background-color: hsl(0, 100%, 90%);
+  border-color: hsl(0, 100%, 50%);
+}
+
+.option-badge:hover > .remove-btn,
+.option-badge:focus > .remove-btn {
+  color: hsl(0, 100%, 50%);
+}
+
+.option-badge > .remove-btn {
+  font-size: 1.25eem;
+  color: #777;
 }
